added Do I Have To Wear Clothes Today?

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                         <img src="https://github.com/mbthebulldog/Portfolio/blob/master/images/WhoSaidThat.png?raw=true">
                         </a></div>
 
+                        <div class="workLeft"><a href="http://output.jsbin.com/homiza">
+                        <h5>Do I Have To Wear Clothes Today?</h5>
+                        <img src="https://github.com/mbthebulldog/Portfolio/blob/master/images/Do%20I%20Have%20To%20Wear%20Clothes%20Today%3F.png?raw=trues">
+                        </a></div>
+
                         <div class="workRight"><a href="https://codepen.io/mbthebulldog/full/EmqwvK/">
                         <h5>Erik Satie Tribute Page</h5>
                         <img src="https://github.com/mbthebulldog/Portfolio/blob/master/images/ErikSatie.png?raw=true">
