fixed link for quote page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <img src="https://github.com/mbthebulldog/Portfolio/blob/master/images/MaxwellValentineMusic.png?raw=true">
                         </a></div>
 
-                        <div class="workRight"><a href="http://jsbin.com/qobagahera/edit?html,output">
+                        <div class="workRight"><a href="http://jsbin.com/hasevu/1">
                         <h5>&hellip;Who Said That?</h5>
                         <img src="https://github.com/mbthebulldog/Portfolio/blob/master/images/WhoSaidThat.png?raw=true">
                         </a></div>
