fixed linkedin icon href

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                             <a href="http://maxwellvalentine.tumblr.com"><i class="fa  fa-2x fa-tumblr-square" aria-hidden="true"></i></a>
 
-                            <a href="http://maxwellvalentine.tumblr.com"><i class="fa  fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/maxwellbullard/"><i class="fa  fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
 
                             <a href="https://github.com/mbthebulldog"><i class="fa  fa-2x fa-github-square" aria-hidden="true"></i></a>
 
