Without Form - 3 Tiers

--- a/index.html
+++ b/index.html
@@ -120,24 +120,8 @@
                             <a href="https://codepen.io/mbthebulldog/"><i class="fa  fa-2x fa-cube" aria-hidden="true"></i></a>
                         </div>
                 <!--Blurb-->
-                        <p>Hey! If you want to get ahold of me, feel free to make use of the icons above or the form below. You can ask me about my work, request my résumé, talk to me about yourself, or even just lend me some pointers!
+                        <p>Hey! If you want to get ahold of me, feel free to make use of the icons above or <a href="mailto:maxwell.valentine@icloud.com">email me</a>. You can ask me about my work, request my résumé, talk to me about yourself, or even just lend me some pointers!
                         </p>
-                <!--Form-->
-                        <form id="contactForm">
-                            <div class="form-group">
-                                <label for="name">Name:</label>
-                                <input id="name" class="form-control" type="text" placeholder="Edith McClancy" required>
-                                <label for="exampleInputEmail1">Email:</label>
-                                <input id="email" type="email" class="form-control" aria-describedby="emailHelp" placeholder="pups4eva@doggo.com" required>
-                                <label for="telephone">Phone:</label>
-                                <input id="telephone" class="form-control" type="tel" placeholder="632-555-2494">
-                                <label for="message">Message:</label>
-                                <textarea class="form-control" id="message" rows="10" placeholder="So, what's up?" required></textarea>
-                            </div>
-                            <div id="sendButton">
-                            <button type="submit" class="btn btn-primary">Send</button>
-                            </div>
-                        </form>
                     </div>
                 </section>
             </div>
