--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <div id="navbar" class="masthead">
                     <ul class="nav">
                         <li><a href="#about">About Me</a></li>
-                        <li><a href="#portfolio">My Work</a></li>
                         <li><a href="#contact">Contact Me</a></li>
+                        <li><a href="#portfolio">My Work</a></li>
                     </ul>
                 </div>
             </div>
@@ -60,11 +60,39 @@
 
                         <p>In any case, I love what I do, whether it's making <a href="http://toenlighten.com">this website</a>, writing <a href="http://maxwellvalentinemusic.com/music/the-bus">this song</a>, or just hanging out and being me. Thanks for visiting!
                         </p>
+
+<!--Contact-->
+                        <div id="contact">
+                            <h3 class="sectionHead">Contact Me</h3>
+                    <!--Icons-->
+                            <div id="socialIcons">
+                                <a href="https://www.facebook.com/mbthebulldog"><i class="fa  fa-2x fa-facebook-square" aria-hidden="true"></i></a>
+
+                                <a href="https://twitter.com/mbthebulldog"><i class="fa  fa-2x fa-twitter-square" aria-hidden="true"></i></a>
+
+                                <a href="http://youtube.com/user/mbthebulldog"><i class="fa  fa-2x fa-youtube-square" aria-hidden="true"></i></a>
+
+                                <a href="http://maxwellvalentine.tumblr.com"><i class="fa  fa-2x fa-tumblr-square" aria-hidden="true"></i></a>
+
+                                <a href="https://www.linkedin.com/in/maxwellbullard/"><i class="fa  fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
+
+                                <a href="https://github.com/mbthebulldog"><i class="fa  fa-2x fa-github-square" aria-hidden="true"></i></a>
+
+                                <a href="https://www.khanacademy.org/profile/MaxwellValentine"><i class="fa  fa-2x fa-leaf" aria-hidden="true"></i></a>
+
+                                <a href="https://www.freecodecamp.com/mbthebulldog"><i class="fa  fa-2x fa-fire" aria-hidden="true"></i></a>
+
+                                <a href="https://codepen.io/mbthebulldog/"><i class="fa  fa-2x fa-cube" aria-hidden="true"></i></a>
+                            </div>
+                    <!--Blurb-->
+                            <p>Hey! If you want to get ahold of me, feel free to make use of the icons above or <a href="mailto:maxwell.valentine@icloud.com">email me</a>. You can ask me about my work, request my résumé, talk to me about yourself, or even just lend me some pointers!
+                            </p>
+                        </div>
                     </div>
                 </section>
 
 <!--Portfolio-->
-                <section class="col-sm-6">
+                <section class="col-sm-9">
                     <div id="portfolio" class="panel">
                         <h3 class="sectionHead">My Work</h3>
 
@@ -94,38 +122,8 @@
                         </a></div>
                     </div>
                 </section>
-
-<!--Contact-->
-                <section class="col-sm-3">
-                    <div id="contact" class="panel">
-                        <h3 class="sectionHead">Contact Me</h3>
-                <!--Icons-->
-                        <div id="socialIcons">
-                            <a href="https://www.facebook.com/mbthebulldog"><i class="fa  fa-2x fa-facebook-square" aria-hidden="true"></i></a>
-
-                            <a href="https://twitter.com/mbthebulldog"><i class="fa  fa-2x fa-twitter-square" aria-hidden="true"></i></a>
-
-                            <a href="http://youtube.com/user/mbthebulldog"><i class="fa  fa-2x fa-youtube-square" aria-hidden="true"></i></a>
-
-                            <a href="http://maxwellvalentine.tumblr.com"><i class="fa  fa-2x fa-tumblr-square" aria-hidden="true"></i></a>
-
-                            <a href="https://www.linkedin.com/in/maxwellbullard/"><i class="fa  fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
-
-                            <a href="https://github.com/mbthebulldog"><i class="fa  fa-2x fa-github-square" aria-hidden="true"></i></a>
-
-                            <a href="https://www.khanacademy.org/profile/MaxwellValentine"><i class="fa  fa-2x fa-leaf" aria-hidden="true"></i></a>
-
-                            <a href="https://www.freecodecamp.com/mbthebulldog"><i class="fa  fa-2x fa-fire" aria-hidden="true"></i></a>
-
-                            <a href="https://codepen.io/mbthebulldog/"><i class="fa  fa-2x fa-cube" aria-hidden="true"></i></a>
-                        </div>
-                <!--Blurb-->
-                        <p>Hey! If you want to get ahold of me, feel free to make use of the icons above or <a href="mailto:maxwell.valentine@icloud.com">email me</a>. You can ask me about my work, request my résumé, talk to me about yourself, or even just lend me some pointers!
-                        </p>
-                    </div>
-                </section>
-            </div>
-
+              </div>
+<!--Footer-->
             <div id="footer" class="row">
                 <h5>&copy; Maxwell Valentine Web Development</h5>
             </div>
