--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="main" class="row">
 
 <!--About-->
-                <section class="col-sm-3">
+                <section class="col col-sm-4">
                     <div id="about" class="panel">
                         <h3 class="sectionHead">About Me</h3>
                         <img id="aboutPic" src="https://github.com/mbthebulldog/Portfolio/blob/master/images/about.jpg?raw=true" alt="Maxwell himself lounging lazily on an old pyre or something." class="img-responsive img-circle">
@@ -61,28 +61,32 @@
                         <p>In any case, I love what I do, whether it's making <a href="http://toenlighten.com">this website</a>, writing <a href="http://maxwellvalentinemusic.com/music/the-bus">this song</a>, or just hanging out and being me. Thanks for visiting!
                         </p>
 
-<!--Contact-->
+    <!--Contact-->
                         <div id="contact">
                             <h3 class="sectionHead">Contact Me</h3>
                     <!--Icons-->
                             <div id="socialIcons">
-                                <a href="https://www.facebook.com/mbthebulldog"><i class="fa  fa-2x fa-facebook-square" aria-hidden="true"></i></a>
+                                <a href="https://www.facebook.com/mbthebulldog"><i class="fa  fa-2x fa-facebook" aria-hidden="true"></i></a>
 
-                                <a href="https://twitter.com/mbthebulldog"><i class="fa  fa-2x fa-twitter-square" aria-hidden="true"></i></a>
+                                <a href="https://twitter.com/mbthebulldog"><i class="fa  fa-2x fa-twitter" aria-hidden="true"></i></a>
 
-                                <a href="http://youtube.com/user/mbthebulldog"><i class="fa  fa-2x fa-youtube-square" aria-hidden="true"></i></a>
+                                <a href="http://youtube.com/user/mbthebulldog"><i class="fa  fa-2x fa-youtube" aria-hidden="true"></i></a>
 
-                                <a href="http://maxwellvalentine.tumblr.com"><i class="fa  fa-2x fa-tumblr-square" aria-hidden="true"></i></a>
+                                <a href="https://soundcloud.com/maxwell-valentine"><i class="fa  fa-2x fa-soundcloud" aria-hidden="true"></i></a>
 
-                                <a href="https://www.linkedin.com/in/maxwellbullard/"><i class="fa  fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
+                                <a href="http://maxwellvalentine.tumblr.com"><i class="fa  fa-2x fa-tumblr" aria-hidden="true"></i></a>
 
-                                <a href="https://github.com/mbthebulldog"><i class="fa  fa-2x fa-github-square" aria-hidden="true"></i></a>
+                                <a href="https://github.com/mbthebulldog"><i class="fa  fa-2x fa-github" aria-hidden="true"></i></a>
+
+                                <a href="https://www.linkedin.com/in/maxwellbullard/"><i class="fa  fa-2x fa-linkedin" aria-hidden="true"></i></a>
 
                                 <a href="https://www.khanacademy.org/profile/MaxwellValentine"><i class="fa  fa-2x fa-leaf" aria-hidden="true"></i></a>
 
-                                <a href="https://www.freecodecamp.com/mbthebulldog"><i class="fa  fa-2x fa-fire" aria-hidden="true"></i></a>
+                                <a href="https://www.freecodecamp.com/mbthebulldog"><i class="fa  fa-2x fa-free-code-camp" aria-hidden="true"></i></a>
 
-                                <a href="https://codepen.io/mbthebulldog/"><i class="fa  fa-2x fa-cube" aria-hidden="true"></i></a>
+                                <a href="https://codepen.io/mbthebulldog/"><i class="fa  fa-2x fa-codepen" aria-hidden="true"></i></a>
+
+                                <a href="https://open.spotify.com/user/1218435254"><i class="fa  fa-2x fa-spotify" aria-hidden="true"></i></a>
                             </div>
                     <!--Blurb-->
                             <p>Hey! If you want to get ahold of me, feel free to make use of the icons above or <a href="mailto:maxwell.valentine@icloud.com">email me</a>. You can ask me about my work, request my résumé, talk to me about yourself, or even just lend me some pointers!
@@ -92,7 +96,7 @@
                 </section>
 
 <!--Portfolio-->
-                <section class="col-sm-9">
+                <section class="col-sm-8">
                     <div id="portfolio" class="panel">
                         <h3 class="sectionHead">My Work</h3>
 
